--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,8 @@
 * {margin: 0px; padding: 0px; font-size: 14px}
 body {height: 100%; background: chartreuse}
-body > header > nav > button {height: 44px; width: 90px}
+body > header > nav > button.selected {height: 44px; width: 90px; background-color: red; outline: none}
+body > header > nav > button.normal {height: 44px; width: 90px; background-color: greenyellow; outline: none}
+body > footer > aside > button.selected {height: 44px; width: 115px; background-color: red; outline: none}
+body > footer > aside > button.normal {height: 44px; width: 115px; background-color: greenyellow; outline: none}
+image {vertical-align: center}
 table {}
