--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,6 +5,5 @@ body > header > nav > button.normal {height: 44px; width: 90px; background-color
 body > footer > aside > button.selected {height: 44px; width: 115px; background-color: red; outline: none}
 body > footer > aside > button.normal {height: 44px; width: 115px; background-color: greenyellow; outline: none}
 image {vertical-align: center}
-table {border-collapse: collapse; border-spacing: 0px; border: 1px;}
-table > tr {min-height: 60px}
+table {border-collapse: collapse; border-spacing: 0px; border: 1px; margin-left: 10px; width: 600px}
 table > tr > td {min-width: 160px}
