--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,9 +1,85 @@
+/* common */
 * {margin: 0px; padding: 0px; font-size: 14px}
 body {height: 100%; background: white}
-body > header > nav > button.selected {height: 44px; width: 90px; background-color: red; outline: none}
-body > header > nav > button.normal {height: 44px; width: 90px; background-color: greenyellow; outline: none}
-body > footer > aside > button.selected {height: 44px; width: 115px; background-color: red; outline: none}
-body > footer > aside > button.normal {height: 44px; width: 115px; background-color: greenyellow; outline: none}
 image {vertical-align: center}
+
+/* home */
+.admin-layout-header {
+    width: 100%;
+    height: 56px;
+    background-color: #23262E;
+    display: flex;
+}
+
+.admin-layout-section {
+    width: 100%;
+    height: calc(100% - 56px);
+    display: flex;
+}
+
+.admin-layout-aside {
+    padding-top: 8px;
+    width: 150px;
+    background-color: #393D49;
+}
+
+.admin-layout-main {
+    width: calc(100% - 150px);;
+    background-color: white;
+}
+
+.admin-logo {
+    left: 0;
+    top: 0;
+    width: 150px;
+    line-height: 56px;
+    text-align: center;
+    color: #009699;
+    font-size: 20px;
+    display: inline-block;
+}
+
+.admin-header-button {
+    height: 56px;
+    width: 100px;
+    background-color: #23262E;
+    color: rgba(255,255,255,.7);
+    outline: none;
+    border: 0px;
+    font-size: 18px;
+}
+
+.admin-header-button-selected {
+    height: 56px;
+    width: 100px;
+    background-color: #23262E;
+    color: white;
+    outline: none;
+    border: 0px;
+    font-size: 18px;
+}
+
+.admin-aside-button {
+    height: 48px;
+    width: 150px;
+    background-color: #393D49;
+    color: rgba(255,255,255,.7);
+    outline: none;
+    border: 0px;
+    font-size: 16px;
+}
+
+.admin-aside-button-selected {
+    height: 48px;
+    width: 150px;
+    background-color: #393D49;
+    color: white;
+    outline: none;
+    border: 0px;
+    font-size: 16px;
+}
+
+/* layout */
+
 table {border-collapse: collapse; border-spacing: 0px; border: 1px; margin-left: 10px; width: 600px}
 table > tr > td {min-width: 160px}
